tests/paczka2/big_fuzzy/14765314.err
Error in line 5: s7H S741 59,9
Error in line 6: s7H A260 59,8
Error in line 18: JKt A172 95,51
Error in line 14: NPKf S741 72,4
Error in line 23: S741 S741 168,29
Error in line 19: NPKf S793 83,1
Error in line 31: NPKf A172 77,7
Error in line 35: NPKf S741 15,9
Error in line 32: OF6LyIQBhW S793 53,7
Error in line 21: S741 S741 91,3
Error in line 37: OF6LyIQBhW A260 95,1
Error in line 47: o9rBeDR2 S741 21,94
Error in line 41: OF6LyIQBhW S793 87,1
Error in line 29: JKt S793 70,0
Error in line 56: o9rBeDR2 S741 14,6
Error in line 61: o9rBeDR2 A172 73,3
Error in line 74: JKt S741 58,1
Error in line 77: NPKf S741 -6,9
Error in line 65: NPKf S741 85,2
Error in line 93: s7H A172 135,7
Error in line 98: S741 A260 34,3
Error in line 89: o9rBeDR2 A172 99,1
Error in line 104: S741 S793 66,7
Error in line 110: OF6LyIQBhW S741 25,7
Error in line 111: S741 A172 414,0
Error in line 100: NPKf A260 114,9
Error in line 116: NPKf S793 13,8
Error in line 115: S741 A260 44,3
Error in line 122: NPKf A260 97,6
Error in line 134: o9rBeDR2 A172 111,38
Error in line 135: OF6LyIQBhW A260 3,4
Error in line 138: s7H S793 454,2
Error in line 133: o9rBeDR2 A172 34,3
Error in line 147: o9rBeDR2 S793 34,2
Error in line 162: S741 A260 32,8
Error in line 163: S741 S793 37,2
Error in line 169: s7H A172 74,7
Error in line 158: o9rBeDR2 S741 57,8
Error in line 178: o9rBeDR2 S793 66,5
Error in line 179: o9rBeDR2 S741 19,8
Error in line 194: S741 S741 210,5
Error in line 211: S741 A+60 +0+,6
Error in line 202: NBxyISi7 S741 5,4
Error in line 213: NBxyISi7 A172 89,6
Error in line 200: S741 A260 70,6
Error in line 215: NBxyISi7 S793 93,3
Error in line 221: NBxyISi7 A260 57,6
Error in line 216: s7H A172 384,3
Error in line 217: S741 S741 60,4
